pregunta 3 con grafico

--- a/informe.tex
+++ b/informe.tex
@@ -223,7 +223,11 @@ Los codigos estan en el archivo \texttt{pregunta\_3.m} con un ejemplo de
 los resultados en \texttt{respuesta\_3.txt}. Es claro que el punto
 minimizante de esta funcion corresponde a \((1,1)\), asi que tomamos solo
 dos puntos iniciales, \(x_0 = (2.5, 3.5), x_0 = (-1,0) \) ambos no tan
-lejos del minimo para analisar.
+lejos del minimo para analisar. Es bueno siempre tener la forma de la
+funcion en mente
+\begin{center}
+  \includegraphics[scale=0.6]{pregunta3.png}
+\end{center}
 
 \subsection*{Maximo descenso}
 Este corresponde a la primera seccion en el archivo
@@ -368,7 +372,6 @@ homogeneos para ambos valores de \(x_0 = (2.5, 3.5), x_0 = (-1,0)\)
 (-1.00, 0.00) & (1.00, 1.00) & 1.17 & 1.17 & 33  & 0.00 \\
 \end{tabular}
 \]
-
 Algo interesante a considerar es la consistencia de la cantidad de
 iteraciones que le toma llegar al optimo, siempre tomando a lo mas 300
 iteraciones y siempre llegando al punto minimo de la funcion. Podemos
